--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
+    <title>first meeting</title>
   </head>
   <body>
+    <h1>First Meeting</h1>
+    <p>This is my own meeting</p>
+    <h2>Attdence:</h2>
+    <p style="color:blue;">Ruyi Wu</p>
   </body>
 </html>
