--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
   </head>
   <body>
     <h1>First Meeting</h1>
-    <p>This is my own meeting</p>
+    <p>This is my own meeting and today is April 14</p>
     <h2>Attdence:</h2>
     <p style="color:blue;">Ruyi Wu</p>
+    <h3>Material Cover:</h3>
+    <p> simply talk about game engine &#128516 </p>
+    <p> talk about re engine and unreal engine main difference, and what they can do</p>
+    <h3> Meeting material graph</h3>
+    <img src="IMG_0129.png" alt="Some Chart">
+    <video controls>
+    	<source src="screenshots/IMG_0131.mp4" type="video/mp4">
+    </video>
+    <audio control>
+    	<source src="screenshots/IMG_0131 [vocals].mp3" type="audio/mpeg">
+    </audio>
+    	
+    <h3> Attdence check:</h3>
+    <form >
+    <lable for = "fname">First name:</lable><br>
+    <input type ="text" id="fname" name = "fname" value="funny"><br>
+    <label for="lname">Last name:</label><br>
+  	<input type="text" id="lname" name="lname" value="real funny"><br><br>
+ 	<input type="submit" value="Submit">
+    </form>
+    
   </body>
 </html>
