--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <p> simply talk about game engine &#128516 </p>
     <p> talk about re engine and unreal engine main difference, and what they can do</p>
     <h3> Meeting material graph</h3>
-    <img src="IMG_0129.png" alt="Some Chart">
+    <img src="IMG_0129.png" alt="Some Chart" width="500" height="300">
     <video controls>
     	<source src="screenshots/IMG_0131.mp4" type="video/mp4">
     </video>
-    <audio control>
+    <audio controls>
     	<source src="screenshots/IMG_0131 [vocals].mp3" type="audio/mpeg">
     </audio>
     	
