--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     </audio>
     	
     <h3> Attdence check:</h3>
-    <form >
-    <lable>First name:</lable><br>
+    <form action="/submit">
+    <lable for="fname>First name:</lable><br>
     <input type ="text" id="fname" name = "fname" value="funny"><br>
-    <label>Last name:</label><br>
+    <label for="lname">Last name:</label><br>
   	<input type="text" id="lname" name="lname" value="real funny"><br><br>
  	<input type="submit" value="Submit">
     </form>
